--- a/CarbonAnalysis.ipynb
+++ b/CarbonAnalysis.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Dosyanızı yükleyin\n",
-    "data = pd.read_csv(\"C:/Users/aziz-/Desktop/API_EN.ATM.CO2E.PC_DS2_en_csv_v2_1627.csv\", skiprows=4)"
+    "data = pd.read_csv(\"data.csv\", skiprows=4)"
    ]
   },
   {
